[package]
name = "rsql-lexer"
version = "0.1.0"
authors = ["Tahmid Sadik <tahmidsadik112@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
#logos = "0.11.4"
[dev-dependencies]
wasm-bindgen-test = "0.2"
